[project]
name = "streamlink-poopballstv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlink>=7.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I"
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
force-single-line = true
known-local-folder = ["src"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100
